# bills

./: .gitignore  Cargo.toml
src/: main.rs  output.rs  ratatui_interface.rs  template.txt
