[package]
name = "bills"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
crossterm = "0.27.0"
dirs = "5.0.1"
polars = "0.40.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tectonic = { git = "https://github.com/tectonic-typesetting/tectonic.git", branch = "master" }
